<resources>
    <string name="app_name">TriviaTI</string>
    <string name="welcome_headline">Vamos a jugar!</string>
    <string name="welcome_subtitle">Pon a prueba tus conocimientos informáticos</string>
    <string name="play_now">Jugar Ahora!</string>
    <string name="about">Sobre el proyecto</string>
    <string name="next_quiz_button">Última palabra!</string>
    <string name="next_time_message">Mejor suerte la proxima vez!</string>
    <string name="game_stats">Resumen de juego:</string>
    <string name="correct_questions">Preguntas correctas:</string>
    <string name="play_again">Probar otra vez!</string>
    <string name="you_are_winner">Haz ganado, felicidades!</string>

    <string name="AppAdsID">ca-app-pub-3996219913975188~9032785200</string>
    <string name="BannerAdsId">ca-app-pub-3996219913975188/2028393158</string>

    <string name="resources_description">
        images by Vecteezy: https://www.vecteezy.com/vector-art/125868-trivia-vector-sticker\n
        soundtrack by heatleybros: https://soundcloud.com/heatleybros/8-bit-summer-video-game-chiptune-loop \n
    </string>
    <string name="about_proyect">Sobre el proyecto</string>
    <string name="about_proyect_description">Proyecto práctico para la asignatura de Digital Business 2021-1</string>
    <string name="authors">Autores</string>
    <string name="resources">Recursos usados</string>
</resources>