<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="dev.willcode.triviati.ui.lostGame.infraestructure.LostGameFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/quiz" />

    <pl.droidsonroids.gif.GifImageView
        android:src="@drawable/looser"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/app_name"
         />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:text="@string/next_time_message"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_regular"
        android:gravity="center"
        android:text="@string/game_stats"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/nunito_regular"
            android:gravity="center"
            android:text="@string/correct_questions"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/correctQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_regular"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </GridLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/nunito_bold"
        android:paddingStart="35dp"
        android:paddingTop="15dp"
        android:paddingEnd="35dp"
        android:paddingBottom="15dp"
        android:text="@string/play_again"
        android:textSize="16sp"
        app:backgroundTint="@color/purple_200"
        app:cornerRadius="10dp" />

</LinearLayout>