<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="dev.willcode.triviati.ui.wonGame.infraestructure.WonGameFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/quiz" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:text="@string/you_are_winner"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <pl.droidsonroids.gif.GifImageView
        android:src="@drawable/winner"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:contentDescription="@string/app_name"
         />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/nunito_bold"
        android:paddingStart="35dp"
        android:paddingTop="15dp"
        android:paddingEnd="35dp"
        android:paddingBottom="15dp"
        android:text="@string/play_again"
        android:textSize="16sp"
        app:backgroundTint="@color/purple_200"
        app:cornerRadius="10dp" />

</LinearLayout>