<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_900"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="dev.willcode.triviati.ui.home.infraestructure.HomeFragment">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/welcome_headline"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_light"
            android:text="@string/welcome_subtitle"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/nunito_bold"
            android:paddingStart="35dp"
            android:paddingTop="15dp"
            android:paddingEnd="35dp"
            android:paddingBottom="15dp"
            android:text="@string/play_now"
            android:textSize="16sp"
            app:backgroundTint="@color/purple_200"
            app:cornerRadius="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:paddingStart="35dp"
            android:paddingTop="15dp"
            android:paddingEnd="35dp"
            android:paddingBottom="15dp"
            android:text="@string/about"
            android:textSize="16sp"
            app:backgroundTint="@color/transparent"
            app:cornerRadius="10dp"
            app:strokeColor="@color/purple_200"
            app:strokeWidth="2dp" />


    </LinearLayout>
</LinearLayout>